# git-mirrorer

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.sample.yaml  git-mirrorer.c  git_mirrorer.c  prepare_deps.sh  repos.sample.yaml  repos.yaml  simple_config.sample.yaml  version.sh
examples/: config.sample.yaml  stdin_with_template.sh
scripts/: version.sh
systemd/: git-mirrorer.service  git-mirrorer.sysusers  git-mirrorer.timer
